Merge with microsite project update